# opengl_base

./: .clang-format  .clang-tidy  CMakeLists.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
libs/imgui/: CMakeLists.txt
src/: imgui_impl_opengl3.cpp  input.hpp  main.cpp  mesh.hpp  shader.hpp  window.hpp
